--- a/.env
+++ b/.env
@@ -13,7 +13,8 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=
-DB_DATABASE=my_project
+# DB_DATABASE=my_project
+DB_DATABASE=test_db
 DB_DEBUG=false
 HASH_DRIVER=bcrypt
 API_KEY=5mx8W6D4EyUgQpFD
